# ecdsa-tss

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  gen_proto.sh  go.mod  go.sum  main.go  run.sh
config/: config.go  config_test.go
logger/: logger.go
proto/: signer.proto
signer/: crypto.go  crypto_test.go  party.go  service.go  service_test.go  utils.go
signer/proto/: signer.pb.go  signer_grpc.pb.go
signer/testdata/: key1.json  key2.json  key3.json
src/: lib.rs
src/proto/: signer.rs
