[package]
name = "bsc-tss"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.36", features = ["full"] }
thiserror = "2.0"
http = "1.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
